tests/sema/fail/v16_fail_adt_null_check_variant_field.ep
# COMPILE_FAIL: union Node has no common embedded field name
struct Leaf { name: str }
struct Pair { value: i64 }
type Node = Leaf | Pair
fun main(): void {
    let n: Node = new Node(new Pair { value: 1 })
    if n.name? {
        println("unreachable")
    }
}
